--- a/test/web-tests/formTest.html
+++ b/test/web-tests/formTest.html
@@ -8,6 +8,12 @@
 	<p>This page exists so <a href="/bounce">Bounce</a> form elements can be tested in a round trip fashion to BedSheet.</p>
 	<p id="p" class="good see">Hello!</p>
 	
+	<div id="elemTest1">Hello!</div>
+	
+<div id="elemTest2">Hello
+	<span> Mum</span>
+!</div>
+	
 	<form action="/printForm" method="post">
 		<input id="textbox" name="textbox" type="text" value="Dimethyltryptamine"/>
 		
@@ -19,7 +25,7 @@
 
 		<input id="hidden" name="hidden" type="hidden" value="Gabapentin"/>
 		
-		<select id="select" name="select">
+		<select id="selectbox" name="selectbox">
 			<option value="hawk">Hawk Dude</option>
 			<option value="herb" checked="checked">Herb Dude</option>
 			<option value="hash">Hash Dude</option>
