- New: Support for HTML5 submit attributes 'formaction', 'formmethod' and 'formenctype'.  - New: 'SubmitButton' support for '<input type="image">' and '<button type="submit">'.

--- a/test/web-tests/formTest.html
+++ b/test/web-tests/formTest.html
@@ -36,6 +36,10 @@
 		<input id="m3" name="Mescaline" type="radio" value="Wine"/> 
 	
 		<input id="submit" name="submit" type="submit" value="Desoxypipradrol"/>
+		<input id="imgSubmit" name="submit" type="image" value="1"/>
+		<button id="btnSubmit" name="submit" type="submit" value="2"/>
+		
+		<input id="submitAlt" name="submit" type="submit" value="dex" formaction="/printFormAlt" formmethod="WEIRD" />
 	</form>
 </body>
 </html>
