Select options are now selected and not checked... Duh!

--- a/test/web-tests/formTest.html
+++ b/test/web-tests/formTest.html
@@ -27,7 +27,7 @@
 		
 		<select id="selectbox" name="selectbox">
 			<option value="hawk">Hawk Dude</option>
-			<option value="herb" checked="checked">Herb Dude</option>
+			<option value="herb" selected="selected">Herb Dude</option>
 			<option value="hash">Hash Dude</option>
 		</select>
 	
