Submitting encoded forms now always sets the Content-Length HTTP request header.

--- a/test/web-tests/formTest.html
+++ b/test/web-tests/formTest.html
@@ -39,7 +39,7 @@
 		<input id="imgSubmit" name="submit" type="image" value="1"/>
 		<button id="btnSubmit" name="submit" type="submit" value="2"/>
 		
-		<input id="submitAlt" name="submit" type="submit" value="dex" formaction="/printFormAlt" formmethod="WEIRD" />
+		<input id="submitAlt" name="submit" type="submit" value="dex" formaction="/printFormAlt" formmethod="get" />
 	</form>
 </body>
 </html>
