CastErr was thrown when an enclosing form could not be found for an <input>, now it's a test failure

--- a/test/web-tests/formTest.html
+++ b/test/web-tests/formTest.html
@@ -10,6 +10,8 @@
 	
 	<div id="elemTest1">Hello!</div>
 	
+	<input id="formless" name="formless" type="text" value="Orphaned"/>
+	
 <div id="elemTest2">Hello
 	<span> Mum</span>
 !</div>
