--- a/test/web-tests/formTest.html
+++ b/test/web-tests/formTest.html
@@ -16,7 +16,7 @@
 	<span> Mum</span>
 !</div>
 	
-	<form action="/printForm" method="post">
+	<form id="formId" action="/printForm" method="post">
 		<input id="textbox" name="textbox" type="text" value="Dimethyltryptamine"/>
 		
 		<textarea id="textarea" name="textarea">
@@ -43,5 +43,8 @@
 		
 		<input id="submitAlt" name="submit" type="submit" value="dex" formaction="/printFormAlt" formmethod="get" />
 	</form>
+	<div>
+		<input id="submitAlt2" name="submit" type="submit" value="dex2" form="formId" />
+	</div>
 </body>
 </html>
