--- a/test/web-tests/formTest.html
+++ b/test/web-tests/formTest.html
@@ -45,6 +45,7 @@
 	</form>
 	<div>
 		<input id="submitAlt2" name="submit" type="submit" value="dex2" form="formId" />
+		<input id="submitAlt3" name="submit" type="submit" form="formId" />
 	</div>
 </body>
 </html>
