fail if form doesn't exist

--- a/test/web-tests/formTest.html
+++ b/test/web-tests/formTest.html
@@ -46,6 +46,7 @@
 	<div>
 		<input id="submitAlt2" name="submit" type="submit" value="dex2" form="formId" />
 		<input id="submitAlt3" name="submit" type="submit" form="formId" />
+		<input id="submitAlt4" name="submit" type="submit" form="formOops" />
 	</div>
 </body>
 </html>
